# tile-mate

./: .gitignore  .trufflehog.txt  CHANGELOG.md  README.md  environment.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: changelog.yml  distribute.yml  labeled-pr.yml  release-github.yml  static-analysis.yml  tag.yml  test.yml
notebooks/: Basic_Demo.ipynb  ESA_World_Cover_Plotting.ipynb
notebooks/tile_creation/: 0_Organize_Hansen_Landsat_Mosaics.ipynb  1_ESA_World_Cover.ipynb  2_Peckel_Water_Mask.ipynb  3_s1_2020_vv_coherence.ipynb  4_100m_Copernicus_landcover.ipynb  5_HAND.ipynb  6_RADD.ipynb  7_glad_lulc.ipynb  ESA World Cover.ipynb  Peckel Water Mask.ipynb
src/tile_mate/: stitcher.py  tile_model.py
tests/: test_stitch_api.py
tile_stitcher/: __init__.py  exceptions.py  sticher.py  stitcher.py  tile_model.py
